<resources>
    <string name="app_name">Psychological Essence</string>
    <string name="time_article">Время чтения: %s</string>
    <string name="login_go">Войти в аккаунт</string>
    <string name="login">E-mail</string>
    <string name="login_password">Пароль</string>
    <string name="login_noAcc">Нет аккаунта?</string>
    <string name="login_regis">Зарегистрируйтесь</string>
    <string name="login_reset">Восстановить пароль</string>
    <string name="login_verify">Повторно отправить код подтверждения</string>
    <string name="register_title">Регистрация</string>
    <string name="register_name">Имя</string>
    <string name="register_fullname">Фамилия</string>
    <string name="register_midname">Отчество</string>
    <string name="register_sex">Выберите пол</string>
    <string name="register_male">Мужской</string>
    <string name="register_female">Женский</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Придумайте пароль</string>
    <string name="register_repeatPassword">Повторите пароль</string>
    <string name="register_terms">Нажимая кнопку зарегистрироваться, Вы принимаете условия пользовательского соглашения!</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="login_hintEmail">Введите email</string>
    <string name="login_hintPassword">Введите пароль</string>
    <string name="register_hintName">Введите имя</string>
    <string name="register_hintSex">Выберите пол</string>
    <string name="register_hintRepeatPassword">Повторите пароль</string>
    <string name="courses">Курсы</string>
    <string name="course">Курс</string>
    <string name="newCourses">Новинки</string>
    <string name="specCourses">Специально для вас</string>
    <string name="seeAll">Смотреть все</string>
    <string name="durationCourses">Длительность ${duration} месяца</string>
    <string name="goToTest">Перейти к тесту</string>
    <string name="tempLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam dictum nulla nullam. Lorem ipsum dolor sit amet, consectetur adipiscing</string>
    <string name="develop">Прокачай себя вместе с нами всего за 99 ₽/мес.</string>
    <string name="menu_title">КАТЕГОРИИ</string>
    <string name="menu_tests">Тесты</string>
    <string name="menu_character">Характер человека</string>
    <string name="menu_relationship">Межличностное отношение</string>
    <string name="menu_psychology">Психологическое состояние</string>
    <string name="menu_intelligence">Интеллект</string>
    <string name="menu_orientation">Профессиональная ориентация</string>
    <string name="menu_articles">Статьи</string>
    <string name="menu_gaslighting">Как понять, что вы имеете дело с газлайтингом</string>
    <string name="menu_recomendations">Рекомендации</string>
    <string name="menu_films">Рекомендации по просмотру фильмов</string>
    <string name="menu_serials">Рекомендации по просмотру сериалов</string>
    <string name="menu_books">Рекомендации по чтению книг</string>
    <string name="menu_facts">Факты</string>
    <string name="menu_psychologyFacts">Различные факты по психологии</string>
    <string name="menu_favourites">Избранное</string>
    <string name="menu_settings">Настройки</string>
    <string name="settings_acc">Аккаунт</string>
    <string name="settings_app">Настройки приложения</string>
    <string name="settings_interface">Настройки интерфейса</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_fontsize">Размер шрифта</string>
    <string name="settings_anim">Анимации</string>
    <string name="settings_notice">Настройка уведомлений</string>
    <string name="settings_sub">Подписка</string>
    <string name="settings_cont">Контакты и обратная связь</string>
    <string name="settings_score">Поставить оценку</string>
    <string name="settings_help">Написать в поддержку</string>
    <string name="settings_upgrade">Предложить улучшения</string>
    <string name="settings_comp">Анонсы мероприятий</string>
    <string name="settings_team">Команда</string>
    <string name="news_new">Новинки</string>
    <string name="news_new_title">Тест определения типа личности DISC</string>
    <string name="news_new_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam dictum nulla nullam amet morbi eros id fringilla. Sed quis morbi dictum aliquam tristique quis euismod id.</string>
    <string name="news_new_btn">Пройти</string>
    <string name="news_like">Вам понравится</string>
    <string name="news_like_title">Что делать, если вы сталкнулись с газлайтингом</string>
    <string name="news_like_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam dictum nulla nullam amet morbi eros id fringilla. Sed quis morbi dictum aliquam tristique quis euismod id.</string>
    <string name="news_notFinish">Вы еще не завершили</string>
    <string name="news_notFinish_title">Что делать, если вы сталкнулись с газлайтингом</string>
    <string name="news_notFinish_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam dictum nulla nullam amet morbi eros id fringilla. Sed quis morbi dictum aliquam tristique quis euismod id.</string>
    <string name="news_notFinish_prompt">Завершено на 70%</string>
    <string name="news_notFinish_btn1">Продолжить</string>
    <string name="tests_title">Тесты</string>
    <string name="tests_subtitle">Характер человека</string>
    <string name="test_close">Завершить</string>
    <string name="articles_title">Статьи</string>
    <string name="articles_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="articles_btn">Читать</string>
    <string name="title_activity_test_part">TestPart</string>
    <string name="tests">Тесты</string>
    <string name="test_back">Назад</string>
    <string name="test_go">Следующий вопрос</string>
    <string name="test_skip">Пропустить</string>
    <string name="test_finish">Завершить</string>
    <string name="test_results">Результаты</string>
    <string name="backBtn">Предыдущий</string>
    <string name="nextBtn">Следующий</string>
    <string name="skipBtn">Пропустить вопрос</string>
    <string name="finishBtn">Завершить тест</string>
    <string name="results">Результаты</string>
    <string name="backToTests">К списку тестов</string>
    <string name="ttuHighPoints">Высокие показтели</string>
    <string name="ttuAveragePoints">Средние показтели</string>
    <string name="ttuLowPoints">Низкие показтели</string>
    <string name="ttuHighDes">Высокие значения толерантности к неопределенности свидетельствуют о стремлении к чему-то новому, изменениям; о готовности следовать неизвестными путями. Такие обстоятельства рассматриваются ими как возможность развития и новый опыт. Люди с высокими баллами по данной шкале не чувствуют себя дискомфортно в ситуациях с неясной или неполной информацией. Обычно могут спокойно принимать эффективные решения в непредсказуемых обстоятельствах. Как правило, предпочитают разрешать сложные и оригинальные задачи, выходить за рамки ограничений. </string>
    <string name="ttuAverageDes">Средние значения толерантности к неопределенности свидетельствуют о не полном принятии неизвестности. Как правило, не испытывая напряжения в ситуациях с не совсем полной информацией, люди со средними показателями при полной неизвестности чувствуют себя дискомфортно. В каких-то жизненных сферах неопределенность может давить сильнее, чем в других. Могут быть открыты и готовы к новому и изменениям, но не стремиться к этому самостоятельно. </string>
    <string name="ttuLowDes">Низкие значения толерантности к неопределенности свидетельствуют об отсутствии стремления к сему-то новому, к изменениям. Как правило, люди с низкими показателями предпочитают идти по известному, привычному и понятному пути. Чувствуют себя неуютно в непредсказуемых ситуациях с недостатком информации, им сложно принимать решения в таких условиях. Предпочитают разрешать задачи с известным и явным решением. </string>
    <string name="ttunHighDes">Высокие значения интолерантности к неопределенности свидетельствуют о высоком стремлении к упорядоченности и ясности в окружающем мире. Люди с высокими баллами не принимают неопределенность в мире идей, для них предпочтительнее отсутствие противоречивости, ясность и знакомость. Как правило, для них важны правила и установленные принципы. Часто они четко разграничивают правильное и неправильное.</string>
    <string name="ttunAverageDes">Средние значения интолерантности к неопределенности свидетельствуют о не ярко выраженном стремлении к упорядоченности и ясности в окружающем мире. Как правило, предпочитают определенность, но могут ориентироваться и в непредсказуемых ситуациях. Могут отдавать должное правилам и установленным принципам в определенных сферах жизни, но в других им не нужна четкая регламентированность</string>
    <string name="ttunLowDes">Низкие значения интолерантности к неопределенности свидетельствуют об отсутствии стремления к ясности и упорядоченности в окружающем мире. Для них неважно, насколько известна и структурирована ситуация – они чувствуют себя комфортно в таких условиях. В отсутствии регламентированности и правил могут спокойно найти решение и идти по непредсказуемому дороге. Для них нет четкого разграничения правильных и неправильных путей, способов решения, мнений. </string>
    <string name="ttuinterPersHighDes">Высокие значения межличностной интолерантности к неопределенности свидетельствуют о высоком стремлении к снижению неясности в мире людей, в отношениях с ними. Испытывают дискомфорт при неопределенности во взаимодействии с другими, стремятся к контролю и понятности в этом. Им важно четко понимать отношение других людей к ним, их поведение и мысли. </string>
    <string name="ttuinterPersAverageDes">Средние значения межличностной интолерантности к неопределенности свидетельствуют о не ярко выраженной тенденции к снижению неясности с другими людьми. Им может быть важна определенность в отношениях с близкими людьми, но не в отношениях с просто знакомыми. Потребность в четком понимании поведения и мыслей других людей может изменяться в зависимости от конкретной ситуации</string>
    <string name="ttuinterPersLowDes">Низкие значения межличностной интолерантности к неопределенности свидетельствуют об отсутствии потребности снизить неясность в отношениях с другими. Они не испытывают дискомфорта при неопределенности во взаимодействии. Не стремятся к контролю и понятности в межличностном плане. Если реакция на них, поведение и мысли других людей кажутся непредсказуемыми, то у людей с низкой интолерантностью это не вызывает тревоги – они спокойно взаимодействуют и в таких условиях. </string>
    <string name="ascHighRes">Хотя тест широко используется для самодиагностики расстройств аутистического спектра, авторы предупреждают, что он не предназначен для диагностики, и советуют всем, кто получает высокий балл и испытывает некоторые страдания, обратиться за профессиональной медицинской консультацией и не делать поспешных выводов.</string>
    <string name="ascLowRes">У вас низкий показатель уровня аутистических черт. Если вам кажется, что вы испытываете некоторые затруднения в жизни, лучше обратиться за профессиональной медицинской консультацией.</string>
    <string name="BISHighRes">Люди с высоким уровнем импульсивности склонны действовать под влиянием момента, поспешно и без обдумывания. Им плохо удается контролировать свое поведение и свои мысли, оттормаживать порывы. Как правило, характерна спонтанность, неорганизованность и невнимательность к деталям. Страдает способность концентрировать и удерживать внимание, усидчивость. Им трудно ждать отсроченный результат, могут остановиться на полпути к цели, бросать начатое. </string>
</resources>