<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:background="@drawable/background"
    android:noHistory="true"
    tools:context=".auth.view.LoginFragment">

    <LinearLayout
        android:id="@+id/login_register"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/regis_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/login" />

        <EditText
            android:id="@+id/old_password_input"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@drawable/regis_inp_bg"
            android:ems="10"
            android:fontFamily="@font/montserrat_alternates"
            android:inputType="textPersonName"
            android:paddingLeft="20dp" />


        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/login_password" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:passwordToggleEnabled="true"
                tools:ignore="MissingConstrains">

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="@drawable/regis_inp_bg"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_alternates"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:text="@string/login_noAcc" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/regis_btn_bg"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/login_regis"
            android:textColor="@android:color/black"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/regis_btn_bg"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/login_reset"
            android:textColor="@android:color/black"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/button_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/regis_btn_bg"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/login_verify"
            android:visibility="gone"
            android:textColor="@android:color/black"
            app:rippleColor="#FFFFFF" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
